# bid_assistant

./: README.md  pyproject.toml
src/bid_assistant/: views.py
src/thcloud/: cmdline.py  dao.py  db.py  log.py  middlewares.py  routes.py  schemas.py  server.py  services.py
src/thcloud/config/: __init__.py  settings.yml
src/thcloud/migration/: env.py
tests/: __init__.py  conftest.py  settings.yml  test_cmdline.py  test_dao.py  test_dependencies.py  test_services.py  test_views.py
