[tool.poetry]
name = "bid-assistant"
version = "0.1.0"
description = "bid_assitant_backend"
authors = ["hanbon tang <906141057@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
click = "8.1.3"
dynaconf = "^3.1.11"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
uvicorn = "^0.30.3"
alembic = "^1.13.2"
toml = "^0.10.2"
pytest = "^8.3.2"
isort = "^5.13.2"
pymysql = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
requests = "^2.32.3"
pytest-mock = "^3.14.0"
isort = "^5.13.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bid_assiant = "thcloud.cmdline:main"

[[tool.poetry.source]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
